polkadot/xcm/procedural/tests/ui/builder_pattern/badly_formatted_attribute.stderr
error: Expected `builder(loads_holding)` or `builder(pays_fees)`
  --> tests/ui/builder_pattern/badly_formatted_attribute.rs:25:5
   |
25 |     #[builder(funds_holding = 2)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
